Hibernate integration : - Add new Hibernate Libraries - Update env.sh, init.bat, XML Ant target - add Hibernate configuration files - Add new Type Wrapper for Integer and Boolean. - Refactor RestartMode from Enum to class for Hibernate management
- Add Hibernate annotation on needed packages.
- Update bug fix about script arguments on JobFactory_Stax.

- Remove GenericInformationProvider that becomes useless.
- Move ForkEnvironment in common package.
- Create BigString to wrap String -> allow String to be more that 255 length in DB.

/!\ User Type like JavaTask, NativeTask, TaskFlowJob, ... are not annoted because those type don't go in the DB.

- Add unit tests for the jobFactory
- Add many Scheduler tests, including functionnal and unit tests
- Update helper Test : now forking a JVM before starting scheduler

- Update windows an unix bin scripts.

- Manage Hibernate logger using log4J : Display only WARN logs.

SCHEDULING-164 : fixed
Commands are now parsed in the static command value and argument are append to the created string array

--------------------------------------
Oleg Smirnov work on Authentication in resource manager :

Relative to SCHEDULING-63 :
 - Shutdown hook for resource manager.
 - Unified connection to scheduler and resource manager.
 - Documentation updated accordingly.
 - One connection to resource manager from one active object.
 - Update functionnal tests with Authentication for scheduler and resource manager.
 - Simplify a procedure of node deployment during resource manager creation.
 - Fixed scripts for resource manager launching and administration.
 - Blocking waitAndJoin method was added to SchedulerConnector.



git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/scheduling/trunk@11249 28e8926c-6b08-0410-baaa-805c5e19b8d6